[package]
name = "reconcrab"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros", "time", "sync", "fs", "io-util"] }
reqwest = { version = "0.12.18", features = ["json", "cookies"] }
clap = { version = "4.5.39", features = ["derive"] }
url = "2.5.4"
serde = { version = "1.0.29", features = ["derive"] }
serde_json = "1.0.140"
rand = "0.9.1"
sysinfo = "0.35.1"

[[bin]]
name = "reconcrab"
path = "src/reconcrab.rs"

